modules/init/rds.tf
resource "aws_db_instance" "default" {
  allocated_storage      = 10
  engine                 = "mysql"
  engine_version         = "5.7.33"
  instance_class         = "db.t2.micro"
  name                   = var.dbname
  username               = var.dbuser
  password               = data.aws_ssm_parameter.dbpass.value
  parameter_group_name   = "default.mysql5.7"
  skip_final_snapshot    = true
  db_subnet_group_name   = aws_db_subnet_group.default.name
  multi_az               = true
  vpc_security_group_ids = [aws_security_group.my_SG.id]
  }
